# atlas-agent

./: .gitignore  AGENTS.md  ATLAS_CODE_REVIEW_COMMAND.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  index.html  package-lock.json  package.json  shixiang.md  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: browser_automation.rs  env.rs  feishu.rs  lib.rs  main.rs  mcp.rs  security_attack_suite.rs  web.rs
src-tauri/src/agent/: anthropic.rs  browser_agent.rs  capabilities.rs  code_intelligence.rs  contract.rs  core.rs  eval_harness.rs  fallback_client.rs  final_audit.rs  graph_runtime.rs  harness.rs  hooks.rs  llm_client.rs  long_term_memory.rs  mod.rs  model_routing.rs  observability.rs  openai.rs  pause.rs  perception.rs  plugin_quality.rs  probe.rs  protocol_adapter.rs  provider_economics.rs  runtime.rs  skills.rs  team_runtime.rs  token_budget.rs  trajectory.rs  types.rs  verification.rs  workflow_trace.rs  working_memory.rs  workspace_lifecycle.rs
src-tauri/src/commands/: agent.rs  config.rs  feishu.rs  island.rs  local_data.rs  mcp.rs  mod.rs  web.rs
src-tauri/src/config/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/tools/: browser_automation.rs  checkpoint.rs  command.rs  command_safety.rs  create_directory.rs  edit_file.rs  execution_isolation.rs  file_info.rs  file_write.rs  fs_scope.rs  git_readonly.rs  git_write.rs  goal_contract.rs  list_directory.rs  local_context.rs  mcp.rs  mod.rs  outbound.rs  output_limit.rs  plan_tasks.rs  plugin_packages.rs  policy.rs  web.rs  (+7 more)
(+46 files in other folders)
