[package]
name = "atlas"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "atlas_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
anyhow = "1.0"
thiserror = "2.0"
toml = "0.8"
dirs = "5.0"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
regex = "1.10"

[target.'cfg(target_os = "linux")'.dependencies]
# Step 3：Landlock 文件系统沙箱（内核 ≥5.13；纯 Rust、无特权、零外部依赖）。
landlock = "0.4"

[dev-dependencies]
tempfile = "3"
# Step 4：瞬态重试测试用 start_paused 让退避 sleep 零等待自动推进。
# tokio 的 `full` 不含 test-util，必须在 dev 侧显式开启（零运行时影响）。
tokio = { version = "1.40", features = ["full", "test-util"] }